# rust-learn-projects

./: LICENSE
learn-rocket/hello-world/: Cargo.toml
learn-rocket/hello-world/http/: restful-ex.http
learn-rocket/hello-world/src/: main.rs
learn-rocket/manage-state/: Cargo.toml
learn-rocket/manage-state/http/: thunder-collection_Person state.json
learn-rocket/manage-state/src/: main.rs
learn-rocket/product-demo/: .env  Cargo.toml  Rocket.toml
learn-rocket/product-demo/db/: database.sqlite  database.sqlite-shm  database.sqlite-wal
learn-rocket/product-demo/migrations/: 20230831_create-products-table.sql
learn-rocket/product-demo/migrations/2023-08-02-035502_products/: up.sql
learn-rocket/product-demo/src/: basic_auth.rs  main.rs  models.rs  repositories.rs  schema.rs
learn-rocket/rocket-base-auth/: Cargo.toml
learn-rocket/rocket-base-auth/src/: main.rs
learn-rocket/rocket-request/: Cargo.toml  Rocket.toml
learn-rocket/rocket-request/src/: main.rs
pipeviewer/: Cargo.toml
pipeviewer/src/: args.rs  io_worker.rs  lib.rs  main.rs  matcher.rs  stats.rs  timer.rs
rust-algorithms/: Cargo.toml
rust-algorithms/src/: lib.rs  rand.rs  sort.rs
rust-gpt/auto-gippity/: .env  Cargo.toml
rust-gpt/auto-gippity/schemas/: api_schema.json
rust-gpt/auto-gippity/src/: constants.rs  main.rs
rust-gpt/auto-gippity/src/apis/: call_request.rs  client.rs  mod.rs
rust-gpt/auto-gippity/src/constants/: gpt.rs
rust-gpt/auto-gippity/src/helpers/: command_line.rs  env.rs  error.rs  general.rs  (+2 more)
rust-gpt/web_template/: Cargo.toml
rust-syntax/: Cargo.toml
(+24 files in other folders)
