[package]
name = "product-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.1.0", features = ["sqlite"] }

[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_sqlite_pool", "sqlite_pool"]
